# Henosis

./: .gitignore  Cargo.toml  LICENSE  README.md
agghost/: Cargo.toml
agghost/src/: aggregator.rs  lib.rs  main.rs
aggregator/: Cargo.toml
aggregator/guest/: Cargo.toml
aggregator/guest/src/: main.rs
converter/: Cargo.toml
converter/src/: converter.rs  main.rs
fflonk_verifier/: Cargo.toml  gen.py
fflonk_verifier/contracts/: fflonkVerifier.sol
fflonk_verifier/src/: fflonk_profile.pb  main.rs  utils.rs  verifier.rs
fflonk_verifier/src/example/: simple_verification.rs
groth16_aggregator/: Cargo.toml
groth16_aggregator/src/: lib.rs  main.rs  utils.rs  utils2.rs  verifier.rs
henosis/: Cargo.toml
henosis/src/: fetcher.rs  main.rs
host/: Cargo.toml
host/src/: main.rs
methods/guest/: Cargo.toml
methods/guest/src/: main.rs
plonk_verifier/: Cargo.toml
plonk_verifier/src/: lib.rs  utils.rs  verifier.rs
plonk_verifier/src/example/: simple_verification.rs
zkevmguest/: Cargo.toml
zkevmguest/guest/: Cargo.toml
zkevmguest/guest/src/: main.rs
zksync_verifier/: Cargo.toml
zksync_verifier/src/: lib.rs  main.rs  utils.rs  verifier.rs
zksync_verifier/src/contracts/: zksync-verifier.sol
zksync_verifier/src/example/: simple_verification.rs
zksyncguest/: Cargo.toml
zksyncguest/guest/: Cargo.toml
zksyncguest/guest/src/: main.rs
