[workspace]
resolver = "2"
members = [ "groth16_aggregator", "converter", "methods", "plonk_verifier", "henosis", "fflonk_verifier", "zksync_verifier"]

# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.dev.build-override]
opt-level = 3

[profile.release]
debug = 1
lto = true

[profile.release.build-override]
opt-level = 3
