[package]
name = "converter"
version = "0.1.0"
edition = "2021"

[dependencies]
zkevmguest = { path = "../zkevmguest" }
zksyncguest = { path = "../zksyncguest" }
fflonk_verifier = { path = "../fflonk_verifier" }
risc0-zkvm = { version = "0.20.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
bonsai-sdk = "0.6.1"
bytemuck = "1.14.0"
anyhow = "1.0.79"
hex = "0.4.3"
bincode = "1.3.3"
ark-bn254 = "0.3.0"
ark-ec = "0.3.0"
ark-ff = "0.3.0"
