[package]
name = "groth16_aggregator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
halo2-base = "0.4.1"
halo2-ecc = "0.4.1"
halo2curves = "0.6.0"
num-bigint = { version = "0.4", features = ["rand"] }
rand_core = { version = "0.6", default-features = false, features = ["getrandom"] }
rand = "0.8"
rand_chacha = "0.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ark-ff = "0.4.2"
snark-verifier-sdk = "0.1.7"

