[package]
name = "henosis"
version = "0.1.0"
edition = "2021"

[dependencies]
ethabi = "18.0.0"
# ethers = "2.0.13"
ethers = { version = "2.0.13", features = ["ws" ] }
queues = "1.1.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.17", features = ["native-tls"] }
websocket = "0.27.0"
sha256 = "1.5.0"
num-bigint = "0.4.4"
ark-bn254 = "0.3.0"
regex = "1"
fflonk_verifier = { path = "../fflonk_verifier" }
converter = { path = "../converter" }
groth16_aggregator = { path = "../groth16_aggregator" }
tokio-stream = "0.1.14"
avail-subxt = { git = "https://github.com/availproject/avail.git", tag = "v1.11.0.0", features = ["std"]}

[patch.crates-io]
sp-core = { git = "https://github.com/availproject/substrate.git", branch = "goldberg" }
sp-io = { git = "https://github.com/availproject/substrate.git", branch = "goldberg" }
sp-runtime = { git = "https://github.com/availproject/substrate.git", branch = "goldberg" }
sp-std = { git = "https://github.com/availproject/substrate.git", branch = "goldberg" }
sp-core-hashing = { git = "https://github.com/availproject/substrate.git", branch = "goldberg" }
