[package]
name = "verifier"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
# If you want to try (experimental) std support, add `features = [ "std" ]` to risc0-zkvm
risc0-zkvm = { version = "0.21.0", default-features = false, features = [ "std" ] }
# plonk_verifier = { path = "../../plonk_verifier" }
fflonk_verifier = { path = "../../fflonk_verifier" }
zksync_verifier = { path = "../../zksync_verifier" }
ark-bn254 = "0.3.0"
ark-ec = "0.3.0"
ark-ff = "0.3.0"
serde = "1.0"